AG-10446 fix empty log buttons
Merge in EXTENSIONS/browser-extension from fix/AG-10446 to master

Squashed commit of the following:

commit f8fe893627ee2d33d97263ce74cad9f91b4b4b23
Merge: 92ab40aa6 be55e3eb8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 6 14:10:08 2021 +0300

    Merge branch 'master' into fix/AG-10446

commit 92ab40aa6e62259c52855af6d6a0d90a902f005e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 6 13:51:42 2021 +0300

    add comment for .filtering-log__empty

commit 6ea5857ed276ba50ef6b94755b3cb4986b04eca9
Merge: 85eb42124 176879877
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 6 13:47:44 2021 +0300

    Merge branch 'master' into fix/AG-10446

commit 85eb421241e5145016c39ee2e58ad0f095cd13bd
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 5 16:05:32 2021 +0300

    fix empty log buttons

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -139,6 +139,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        /* do not remove "position" and "z-index" */
+        /* due to AG-10446 */
+        position: relative;
+        z-index: 10;
     }
 
     &__empty-in {
